fix: gulpfiles and extra

--- a/src/scss/layout/_galeria.scss
+++ b/src/scss/layout/_galeria.scss
@@ -55,6 +55,7 @@
     color: v.$negro;
     display: grid;
     place-items: center;
+    font-weight: 900;
 
     &:hover {
         cursor: pointer;
