--- a/src/scss/layout/_lineup.scss
+++ b/src/scss/layout/_lineup.scss
@@ -3,15 +3,15 @@
 
 .lineup {
     background-color: v.$rosa;
-    padding: 5rem 0;
-    
+    padding: 5rem 0;   
     h3, p {
         text-align: center;
         color: v.$blanco;
-     }
+    }
     .dia {
         text-transform: uppercase;
         margin: 5rem 0 3rem 0;
+        font-size: 4rem
     }
 }
 
