--- a/src/scss/layout/_video.scss
+++ b/src/scss/layout/_video.scss
@@ -38,7 +38,7 @@
             padding: 1rem;
             }
     p {
-        background-color: #ff5c7f;
+        background-color: v.$rosa;
         display: inline-block;
         padding: 1rem 2rem;
         color: v.$blanco;
